<resources>
    <string name="app_name">WhatsHisName</string>
    <string name="action_settings">Settings</string>
    <string name="listitem_user_display_firstName">James</string>
    <string name="listitem_user_display_lastName">Sanders</string>
    <string name="listitem_user_display_DOB">May 27, 1978</string>
    <string name="lisitem_user_display_zipCode">75002</string>
    <string name="listitem_user_display_birthday">Birthday</string>
    <string name="listitem_user_display_home_zip_code">Home Zip Code</string>
    <string name="lisitem_user_display_textBubble">JS</string>
    <string name="content_main_noContacts">No People to see here.\nNo worries though,\nJust click on the Add Button.</string>
    <string name="dialog_addNewPerson_headerMsg">Add a New Person</string>
    <string name="dialog_savePerson">Save</string>
    <string name="dialog_addPerson_cancel">Cancel</string>
    <string name="menu_add_people_save">Save</string>
    <string name="add_person_activity_title">Add A New Person</string>
    <string name="add_person_alert_cancel_msg">Are you sure you want to cancel adding a new person?</string>
    <string name="add_person_alert_confirm">Yes</string>
    <string name="add_person_alert_continue">No, Keep Adding</string>
    <string name="main_activity_toolbar_title">What\'s His Name Again?</string>
    <string name="menu_edit_people_save">Save</string>
    <string name="edit_people_activity_title">Edit Person</string>
    <string name="edit_person_alert_cancel_msg">Are you sure you want to discard this edit?</string>
    <string name="edit_person_alert_confirm">Yes</string>
    <string name="edit_person_alert_continue">No, Keep Editing</string>
    <string name="delete_person_alert_cancel_msg">Are you sure you want to delete this person?</string>
    <string name="delete_person_alert_confirm">Yes</string>
    <string name="delete_person_alert_continue">No, Keep this person</string>
    <string name="content_add_people_first_name_hint">First Name</string>
    <string name="content_add_people_last_name_hint">Last Name</string>
    <string name="content_add_people_birthday_hint">Birthday (mm/dd/yy)</string>
    <string name="content_add_people_zip_code_hint">Zip Code</string>
    <string name="content_edit_people_first_name_hint">First Name</string>
    <string name="content_edit_people_last_name_hint">Last Name</string>
    <string name="content_edit_people_birthday_hint">Birthday (mm/dd/yy)</string>
    <string name="content_edit_people_zip_code_hint">Zip Code</string>
    <string name="menu_edit_delete">Delete</string>
    <string name="content_about_summary">Thank you so much for taking the time to look at my sample application. I have worn many hats in the technology space, but have fallen in love with mobile application development. If you have any questions or if you\'re interested in talking about how I can help your company, please don\'t hesitate to contact me.</string>
    <string name="content_about_linkedIn">https://www.linkedin.com/in/jsandersii</string>
    <string name="content_about_gmail">jamessandersii@gmail.com</string>
    <string name="content_about_cell">734–218–4389</string>
    <string name="menu_main_about_me">About Me</string>
    <string name="about_activity_title">Hi, I\'m James Sanders</string>
</resources>
