<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditPeopleActivity"
    tools:showIn="@layout/activity_edit_people">

    <EditText
        android:id="@+id/content_edit_people_edtxFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/content_edit_people_first_name_hint"
        android:elegantTextHeight="true"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/content_edit_people_edtxLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/content_edit_people_last_name_hint"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/content_edit_people_edtxBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/content_edit_people_birthday_hint"
        android:inputType="date"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:maxLines="1"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/content_edit_people_edtxZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/content_edit_people_zip_code_hint"
        android:inputType="number"
        android:elegantTextHeight="true"
        android:lines="1"
        android:maxLength="5"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:fontFamily="sans-serif"/>

</LinearLayout>